# jp-nlp-tools

./: Readme.md  pyproject.toml
jp_nlp_tools/: tokenizer.py  vectorizer.py
tests/: test_tokenizer.py  test_vectorizer.py
